--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -38,8 +38,8 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: .
-          file: ./nd064_course_1/exercises/python-helloworld/Dockerfile
+          context: ./nd064_course_1/exercises/python-helloworld/
+          file: ./Dockerfile
           platforms: linux/amd64
           push: true
           tags: karanj01/python-helloworld:latest
